--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Complete Catalog</title>
-<meta content='https://i.postimg.cc/qvVrnPYc/Screenshot-720.png' property='og:image'/>
+<title>We serve 24h</title>
+<meta content='https://imgur.com/6tfeoKE.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
